user can CRUD quiz and question by using EF 6, minus leaderboard

--- a/ProjectExam/ProjectExam/ProjectExam.csproj
+++ b/ProjectExam/ProjectExam/ProjectExam.csproj
@@ -189,11 +189,11 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BeginExamController.cs" />
+    <Compile Include="Controllers\ExamsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
-    <Compile Include="Controllers\QuizController.cs" />
-    <Compile Include="Data\QuestionRepository.cs" />
-    <Compile Include="Data\QuizRepository.cs" />
+    <Compile Include="Controllers\QuestionsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -203,10 +203,8 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\Choice.cs" />
-    <Compile Include="Models\Leaderboard.cs" />
-    <Compile Include="Models\Quiz.cs" />
-    <Compile Include="Models\Grade.cs" />
+    <Compile Include="Models\Exam.cs" />
+    <Compile Include="Models\Globals.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Question.cs" />
@@ -277,11 +275,26 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\Quiz.cshtml" />
-    <Content Include="Views\Quiz\Publish.cshtml" />
-    <Content Include="Views\Quiz\StartQuiz.cshtml" />
+    <Content Include="Views\Exams\Index.cshtml" />
+    <Content Include="Views\Exams\Create.cshtml" />
+    <Content Include="Views\Exams\Manage.cshtml" />
+    <Content Include="Views\Exams\Delete.cshtml" />
+    <Content Include="Views\Exams\Details.cshtml" />
+    <Content Include="Views\Exams\Edit.cshtml" />
+    <Content Include="Views\Exams\AddNewQuestion.cshtml" />
+    <Content Include="Views\Questions\Create.cshtml" />
+    <Content Include="Views\Questions\Delete.cshtml" />
+    <Content Include="Views\Questions\Details.cshtml" />
+    <Content Include="Views\Questions\Edit.cshtml" />
+    <Content Include="Views\Questions\Index.cshtml" />
+    <Content Include="Views\Questions\AddAnotherQuestion.cshtml" />
+    <Content Include="Views\BeginExam\RandomTest.cshtml" />
+    <Content Include="Views\BeginExam\ExamFinalResults.cshtml" />
+    <Content Include="Views\BeginExam\errorpage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Data\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
